# inappropriate-video-detection

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
anomaly-detection/: .gitignore  README.md  notes.txt  requirements.txt
data-scraper/: .gitignore  README.md  pyproject.toml  requirements.txt
data-scraper/data/meta/: keywords_all.json  keywords_en.json  tiktok_fine_meta.json  youtube_fine_meta.json  youtube_full_meta.json
data-scraper/data/videos/: shorts.json
data-scraper/notebooks/: summary.ipynb
data-scraper/src/: keywords.py  main.py  scraper.py  tiktok.py  youtube.py
feature-extractor/: .gitignore  README.md  note.txt  pyproject.toml  requirements.txt
feature-extractor/notebooks/: Untitled.ipynb  batching-of-clips.ipynb  check-batching-bug.ipynb  fix-dataset.ipynb  oom-large-video.ipynb  pad-incomplete-clip.ipynb  preprocessing.ipynb
feature-extractor/pretrained/: i3d_imagenet-pretrained-r50-nl-dot-product_8xb8-32x2x1-100e_kinetics400-rgb_20220812-8e1f2148.pth
feature-extractor/results/: i3d_imagenet-pretrained-r50-nl-dot-product_8xb8-32x2x1-100e_kinetics400-rgb.txt  new_progress.txt  progress.txt  skipped_videos.txt  test_video_size_info.csv  video_size_info.csv  videos.txt
feature-extractor/scripts/: download_model.sh  download_models.sh  extract_n_upload_i3d_rgb.sh  extract_upload_features.sh  install_mmaction2.sh  setup.sh
feature-extractor/src/: dataset_utils.py  example.py  extract_features.py  main.py  transforms.py  upload_to_hf.py
feature-extractor/src/models/: c3d_sports1m-pretrained_8xb30-16x1x1-45e_ucf101-rgb.py  i3d_imagenet-pretrained-r50-nl-dot-product_8xb8-32x2x1-100e_kinetics400-rgb.py  swin-tiny-p244-w877_in1k-pre_8xb8-amp-32x2x1-30e_kinetics400-rgb.py
feature-extractor/src/utils/: check_2stage_pipeline.py  check_batch_pipeline.py  check_e2e_pipeline.py  check_feature_info.py  check_pipeline.py  check_progress_hf.py  check_video_info.py  test.py
vad-app/: requirements.txt
video-anomaly-detection/: example.py
wsvad/: Untitled.ipynb  (+1 more)
(+81 files in other folders)
