[tool.poetry]
name = "feature-extractor"
version = "0.1.0"
description = ""
authors = ["hongjiaherng <jiaherng2001@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "feature_extractor"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = [
    { platform = "win32", url = "https://download.pytorch.org/whl/cu121/torch-2.1.0%2Bcu121-cp311-cp311-win_amd64.whl" },
    { platform = "darwin", url = "https://download.pytorch.org/whl/cpu/torch-2.1.0-cp311-none-macosx_11_0_arm64.whl" },
    { platform = "linux", url = "https://download.pytorch.org/whl/cu121/torch-2.1.0%2Bcu121-cp311-cp311-linux_x86_64.whl" },
]
torchvision = [
    { platform = "win32", url = "https://download.pytorch.org/whl/cu121/torchvision-0.16.0%2Bcu121-cp311-cp311-win_amd64.whl" },
    { platform = "darwin", url = "https://download.pytorch.org/whl/cpu/torchvision-0.16.0-cp311-cp311-macosx_11_0_arm64.whl" },
    { platform = "linux", url = "https://download.pytorch.org/whl/cu121/torchvision-0.16.0%2Bcu121-cp311-cp311-linux_x86_64.whl" },
]
matplotlib = "^3.8.0"
numpy = "^1.26.0"
pandas = "^2.1.1"
tqdm = "^4.66.1"
datasets = "^2.15.0"
decord = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
